# Console-Table

./: .gitignore  README.md  pyproject.toml  setup.cfg  test.py
src/cli_table/: __init__.py  aligners.py  cell.py  row.py  table.py
