[project]
name = "cli_table"
version = "1.0.0"
authors = [
  { name="hamolicious", email="hamolicious@protonmail.com" },
]
description = "Print tables directly in your terminal"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hamolicious/Console-Table"
"Bug Tracker" = "https://github.com/hamolicious/Console-Table/issues"
